--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js --exec babel-node",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run test",
+    "test": "nodemon index.ts --exec mocha --compilers ts:ts-node/register"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,14 @@
   },
   "homepage": "https://github.com/jayjnu/algorithm-study#readme",
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-stage-3": "^6.17.0",
-    "nodemon": "^1.11.0"
+    "@types/chai": "^3.4.34",
+    "@types/colors": "^1.1.1",
+    "@types/mocha": "^2.2.38",
+    "chai": "^3.5.0",
+    "colors": "^1.1.2",
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
+    "ts-node": "^2.0.0",
+    "typescript": "^2.1.5"
   }
 }
