linked list to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,7 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "experimentalDecorators": true,
-    "allowJs": true,
-    "baseUrl": "types",
-    "typeRoots": ["types"]
+    "allowJs": true
   },
   "include": [
     "./**/*"
