--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "algorithm-study",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "npm run test",
     "test": "nodemon index.ts --exec mocha --compilers ts:ts-node/register"
@@ -21,6 +21,7 @@
     "@types/chai": "^3.4.34",
     "@types/colors": "^1.1.1",
     "@types/mocha": "^2.2.38",
+    "@types/node": "^7.0.4",
     "chai": "^3.5.0",
     "colors": "^1.1.2",
     "mocha": "^3.2.0",
