--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/chai": "^3.4.34",
     "@types/colors": "^1.1.1",
     "@types/mocha": "^2.2.38",
+    "@types/node": "^7.0.5",
     "chai": "^3.5.0",
     "colors": "^1.1.2",
     "mocha": "^3.2.0",
