트럭 배차 석세스

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "npm run test",
     "test:maximum-subarray": "nodemon ./maximum-subarray/index.ts --exec mocha --compilers ts:ts-node/register",
+    "test:truck-dispatch": "nodemon ./truck-dispatch/index.ts --exec mocha --compilers ts:ts-node/register",
     "test": "nodemon index.ts --exec mocha --compilers ts:ts-node/register"
   },
   "repository": {
