--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "npm run test",
     "test:maximum-subarray": "nodemon ./maximum-subarray/index.ts --exec mocha --compilers ts:ts-node/register",
     "test:truck-dispatch": "nodemon ./truck-dispatch/index.ts --exec mocha --compilers ts:ts-node/register",
+    "test:to-symmetric-matrix": "nodemon ./to-symmetric-matrix/index.ts --exec mocha --compilers ts:ts-node/register",
     "test": "nodemon index.ts --exec mocha --compilers ts:ts-node/register"
   },
   "repository": {
