--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test:maximum-subarray": "nodemon ./maximum-subarray/index.ts --exec mocha --compilers ts:ts-node/register",
     "test:truck-dispatch": "nodemon ./truck-dispatch/index.ts --exec mocha --compilers ts:ts-node/register",
     "test:to-symmetric-matrix": "nodemon ./to-symmetric-matrix/index.ts --exec mocha --compilers ts:ts-node/register",
+    "test:fibonacci-modified": "nodemon ./fibonacci-modified/index.ts --exec mocha --compilers ts:ts-node/register",
+    "test:fence-wrapping": "nodemon ./fence-wrapping/index.ts --exec mocha --compilers ts:ts-node/register",
     "test": "nodemon index.ts --exec mocha --compilers ts:ts-node/register"
   },
   "repository": {
